crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.blueprint.archetypes.GraphBackground.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
color: [255]
